--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -26,3 +26,17 @@
     position: absolute;
     right: 0
 }
+
+/* week header format */
+.calendar-row-week-format {
+    padding: 30px 0;
+    border-bottom: 1px solid #d5d5d5;
+    border-right: 1px solid #d5d5d5;
+    border-top: 1px solid #d5d5d5;
+    line-height: 100%;
+    background-color: #fcfcfc;
+}
+
+.calendar-row-week-format.first {
+    border-left: 1px solid #d5d5d5;
+}
