--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -40,3 +40,37 @@
 .calendar-row-week-format.first {
     border-left: 1px solid #d5d5d5;
 }
+
+/* body format */
+.calendar-row-format {
+    padding: 30px 0;
+    border-bottom: 1px solid #d5d5d5;
+    border-right: 1px solid #d5d5d5;
+    border-top: none;
+    line-height: 100%;
+    top: 0px;
+}
+
+.calendar-row-format.first {
+    border-left: 1px solid #d5d5d5;
+    background-color: #fcfcfc;
+}
+
+.calendar-row-format.current {
+    color: #fff;
+    background-color: #5CC3BF;
+}
+
+.calendar-row-format.first:hover {
+    background-color: #fcfcfc;
+    cursor: default;
+}
+
+.calendar-row-format:hover {
+    background-color: #ababab;
+    cursor: pointer;
+}
+
+.weekNo {
+    color: #bdbdbd;
+}
