--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -76,33 +76,6 @@
 }
 
 /* event panel */
-
-.event-form .ant-form-item {
-    width: 100%;
+.event-detail {
+    font-size: 1.2em;
 }
-
-.event-input input {
-    border-radius: 0;
-}
-
-.event-list {
-    border-top: 1px solid #d5d5d5;
-}
-
-.event-list-row {
-     text-align: left;
-    padding: 0 5px;
- }
-
-.event-list-content {
-    padding: 5px;
-}
-
-.event-timepicker input {
-    border-radius: 0;
-}
-
-.event-button {
-    border-radius: 0;
-}
-
