--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -127,8 +127,10 @@
 
 .busy {
     font-style:oblique;
-    text-decoration: underline;
-    text-decoration-color: red;
+    /* text-decoration: underline;
+    text-decoration-color: red; */
+    box-shadow: 5px 5px 5px #bdbdbd;
+    
 }
 
 /* event panel */
