--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -1,139 +1,143 @@
 .calendar-pc {
-    width: 72%;
-    margin: 0 auto;
+  width: 72%;
+  margin: 0 auto;
 }
 
 .calendar-mb {
-    width: 100%;
-    margin: 0 auto;
+  width: 100%;
+  margin: 0 auto;
 }
 /* header */
 .calendar-header-row {
-    padding: 8px 0;
-    background-color: #5CC3BF;
+  padding: 8px 0;
+  background-color: #5cc3bf;
 }
 
 .calendar-title {
-    color: white;
-    text-align: center;
-    font-size: 1.4em;
+  color: white;
+  text-align: center;
+  font-size: 1.4em;
 }
 
 .left-btn {
-    border-color: #5CC3BF;
-    position: absolute;
-    left: 0
-  }
+  border-color: #5cc3bf;
+  position: absolute;
+  left: 0;
+}
 
 .right-btn {
-    border-color: #5CC3BF;
-    position: absolute;
-    right: 0
+  border-color: #5cc3bf;
+  position: absolute;
+  right: 0;
 }
 
 /* week header format */
 .calendar-row-week-format-pc {
-    padding: 30px 0;
-    border-bottom: 1px solid #d5d5d5;
-    border-right: 1px solid #d5d5d5;
-    border-top: 1px solid #d5d5d5;
-    line-height: 100%;
-    background-color: #fcfcfc;
+  padding: 30px 0;
+  border-bottom: 1px solid #d5d5d5;
+  border-right: 1px solid #d5d5d5;
+  border-top: 1px solid #d5d5d5;
+  line-height: 100%;
+  background-color: #fcfcfc;
 }
 
 .calendar-row-week-format-mb {
-    padding: 10px 0;
-    border-bottom: 1px solid #d5d5d5;
-    border-right: 1px solid #d5d5d5;
-    border-top: 1px solid #d5d5d5;
-    line-height: 100%;
-    background-color: #fcfcfc;
+  padding: 10px 0;
+  border-bottom: 1px solid #d5d5d5;
+  border-right: 1px solid #d5d5d5;
+  border-top: 1px solid #d5d5d5;
+  line-height: 100%;
+  background-color: #fcfcfc;
 }
 
 .calendar-row-week-format-mb.first {
-    border-left: 1px solid #d5d5d5;
+  border-left: 1px solid #d5d5d5;
 }
 
 .calendar-row-week-format-pc.first {
-    border-left: 1px solid #d5d5d5;
+  border-left: 1px solid #d5d5d5;
 }
 
 /* body format */
 .calendar-row-format-pc {
-    padding: 30px 0;
-    border-bottom: 1px solid #d5d5d5;
-    border-right: 1px solid #d5d5d5;
-    border-top: none;
-    line-height: 100%;
-    top: 0px;
+  padding: 30px 0;
+  border-bottom: 1px solid #d5d5d5;
+  border-right: 1px solid #d5d5d5;
+  border-top: none;
+  line-height: 100%;
+  top: 0px;
 }
 
 .calendar-row-format-mb {
-    padding: 18px 0;
-    border-bottom: 1px solid #d5d5d5;
-    border-right: 1px solid #d5d5d5;
-    border-top: none;
-    line-height: 100%;
-    top: 0px;
+  padding: 18px 0;
+  border-bottom: 1px solid #d5d5d5;
+  border-right: 1px solid #d5d5d5;
+  border-top: none;
+  line-height: 100%;
+  top: 0px;
 }
 
 .calendar-row-format-mb.first {
-    border-left: 1px solid #d5d5d5;
-    background-color: #fcfcfc;
+  border-left: 1px solid #d5d5d5;
+  background-color: #fcfcfc;
 }
 
 .calendar-row-format-pc.first {
-    border-left: 1px solid #d5d5d5;
-    background-color: #fcfcfc;
+  border-left: 1px solid #d5d5d5;
+  background-color: #fcfcfc;
 }
 
 .calendar-row-format-mb.current {
-    color: #fff;
-    background-color: #5CC3BF;
+  color: #fff;
+  background-color: #5cc3bf;
 }
 
 .calendar-row-format-pc.current {
-    color: #fff;
-    background-color: #5CC3BF;
+  color: #fff;
+  background-color: #5cc3bf;
 }
 
 .calendar-row-format-mb.first:hover {
-    background-color: #fcfcfc;
-    cursor: default;
+  background-color: #fcfcfc;
+  cursor: default;
 }
 
 .calendar-row-format-pc.first:hover {
-    background-color: #fcfcfc;
-    cursor: default;
+  background-color: #fcfcfc;
+  cursor: default;
 }
 
 .calendar-row-format-mb:hover {
-    background-color: #ababab;
-    cursor: pointer;
+  background-color: #ababab;
+  cursor: pointer;
 }
 
 .calendar-row-format-pc:hover {
-    background-color: #ababab;
-    cursor: pointer;
+  background-color: #ababab;
+  cursor: pointer;
 }
 
 .invalid {
-    color: #bdbdbd;
+  color: #bdbdbd;
 }
 
 .weekNo {
-    color: #bdbdbd;
+  color: #bdbdbd;
 }
 
 .busy {
-    font-style:oblique;
-    /* text-decoration: underline;
+  font-style: oblique;
+  /* text-decoration: underline;
     text-decoration-color: red; */
-    box-shadow: 5px 5px 5px #bdbdbd;
-    
+  box-shadow: 5px 5px 5px #bdbdbd;
 }
 
 /* event panel */
 .event-detail {
-    font-size: 1.2em;
+  font-size: 1.2em;
+}
+
+.action-btn {
+  color: #5CC3BF;
+  border-color: #5cc3bf;  
 }
